Added GA script to 404 page

--- a/404.md
+++ b/404.md
@@ -9,3 +9,14 @@ permalink: /404.html
   <p>Unfortunately, the page you wanted seems to be lost in space.</p>
 
 </div>
+
+<script>
+   // Create Tracker - Send to GA
+ ga('create', 'UA-30823001-4');
+   ga('send', {
+     hitType: 'event',
+     eventCategory: '404 Response',
+     eventAction: window.location.href,
+     eventLabel: document.referrer
+});
+</script>
